[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/City/2D_WorldMap/Buildings/MunicipalBuilding/municipal building 01 Roof.png" type="Texture" id=1]
[ext_resource path="res://scenes/City/2D_WorldMap/Buildings/MunicipalBuilding/municipal building 01 all walls.png" type="Texture" id=2]
[ext_resource path="res://scenes/City/2D_WorldMap/Buildings/MunicipalBuilding/municipal building 01 Floor.png" type="Texture" id=3]
[ext_resource path="res://scenes/City/2D_WorldMap/Buildings/MunicipalBuilding/municipal building 01 exterior walls.png" type="Texture" id=4]
[ext_resource path="res://scenes/City/2D_WorldMap/Buildings/BuildingTemplate.gd" type="Script" id=5]
[ext_resource path="res://scenes/NPCs/MookNPC.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/_common/GUI/Theme/LargeFont_Vollkorn.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/Quests/QuestTargetLocation.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 478.5, 369.764 )

[node name="Building" type="Node2D"]
script = ExtResource( 5 )

[node name="Floor" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 3 )

[node name="Exterior" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Walls" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.5, -107.236 )
shape = SubResource( 1 )

[node name="LightOccluders" type="Node2D" parent="."]

[node name="StaticBodyWalls" type="Node2D" parent="."]

[node name="NPCs" type="Navigation2D" parent="."]

[node name="PossibleSpawnPoints" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="PossibleSpawnPoints"]
position = Vector2( -104.9, -356.328 )

[node name="Position2D2" type="Position2D" parent="PossibleSpawnPoints"]
position = Vector2( 329.132, -385.19 )

[node name="Position2D3" type="Position2D" parent="PossibleSpawnPoints"]
position = Vector2( -398.51, -219.236 )

[node name="Position2D4" type="Position2D" parent="PossibleSpawnPoints"]
position = Vector2( -387.965, -92.6897 )

[node name="Position2D5" type="Position2D" parent="PossibleSpawnPoints"]
position = Vector2( -303.045, -392.405 )

[node name="Position2D6" type="Position2D" parent="PossibleSpawnPoints"]
position = Vector2( 57.7229, -39.962 )

[node name="AvailableNPCs" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "NPCPracticeDummy" ), [ ExtResource( 6 ) ] ]

[node name="Roof" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="DebugInfo" type="Label" parent="."]
margin_left = -199.0
margin_top = -573.0
margin_right = 195.0
margin_bottom = -514.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 197, 28.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "Player Present? False"
align = 1

[node name="PossibleQuestTargetLocations" type="Node2D" parent="."]

[node name="QuestTargetLocation1" parent="PossibleQuestTargetLocations" instance=ExtResource( 8 )]
position = Vector2( 325, -348 )

[node name="QuestTargetLocation2" parent="PossibleQuestTargetLocations" instance=ExtResource( 8 )]
position = Vector2( -163, -365 )

[node name="QuestTargetLocation3" parent="PossibleQuestTargetLocations" instance=ExtResource( 8 )]
position = Vector2( -374, -367 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
